<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">绿色蔬菜批发平台</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello</string>
	 <color name="main_bg_color">#04805b</color>
	 
    <!-- 底部 -->
    <string name="list">列表</string>
    <string name="main_home">首页</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="main_friends">个人中心</string>

    <!-- 注册界面 -->
    <string name="rg_name">用  户  名：</string>
    <string name="rg_pass">密        码：</string>
    <string name="rg_againpass">确认密码：</string>
    <string name="rg_sex" >性        别：</string>
    <string name="rg_email">邮        箱：</string>
    <string name="rg_male">男</string>
    <string name="rg_female">女</string>
    <string name="register">注册</string>
    
    <string name="home_title">绿色蔬菜批发平台</string>
    <string name="list_title">蔬菜列表</string>
    
    <!-- 个人中心相关的字符串 -->
    <string name="login_dialog">你还没有登陆呢</string>
    <string name="login_name">用户名：</string>
    <string name="login_pwd">密    码：</string>
    
    <string name="no_data">没有找到符合条件的房源</string>
</resources>
