<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    
     >

    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_rg_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_btn_bg"
        android:orientation="horizontal" >

            <RadioButton
                android:id="@id/radio_button0"
                style="@style/main_tab_bottom"
                android:checked="true"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_1_n"
                android:text="@string/main_home" />

            <RadioButton
                android:id="@id/radio_button1"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_2_n"
                android:text="@string/list" />

            <RadioButton
                android:id="@id/radio_button2"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/search"
                android:text="@string/search" />

            <RadioButton
                android:id="@id/radio_button3"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_4_n"
                android:text="@string/main_friends" />

            <RadioButton
                android:id="@id/radio_button4"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:text="@string/more" />
            
    </RadioGroup>
 
    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </android.support.v4.app.FragmentTabHost>

</LinearLayout>